--- a/puper/frontend/src/pages/App.css
+++ b/puper/frontend/src/pages/App.css
@@ -68,7 +68,10 @@ body {
   max-width: 1400px;
   margin: 0 auto;
   width: 100%;
-  position: absolute;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   z-index: 0;
 }
 
