--- a/puper/frontend/src/pages/App.css
+++ b/puper/frontend/src/pages/App.css
@@ -68,7 +68,7 @@ body {
   max-width: 1400px;
   margin: 0 auto;
   width: 100%;
-  position: fixed;
+  position: relative;
   top: 0;
   left: 0;
   right: 0;
