--- a/puper/frontend/src/pages/MapPage.css
+++ b/puper/frontend/src/pages/MapPage.css
@@ -503,11 +503,11 @@
   justify-content: space-between;
   padding: 1.5rem;
   border-bottom: 2px solid var(--psychedelic-purple);
-  background: rgba(0, 0, 0, 0.3);
+  background: rgb(255, 235, 88);
 }
 
 .modal-icon {
-  color: var(--psychedelic-lime);
+  color: rgb(rgb(255, 248, 45));
   font-size: 1.5rem;
   margin-right: 0.5rem;
 }
@@ -517,7 +517,7 @@
   font-family: 'Bebas Neue', cursive;
   font-size: 1.2rem;
   letter-spacing: 2px;
-  color: #FFFFFF;
+  color: #f3ff0b;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
 }
 
